--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Notification Box</string>
 
     <string name="home_screen">HomeScreen</string>
+    <string name="channel_name">test_channel</string>
+    <string name="channel_description">test_description</string>
+    <string name="service_name">Notification Service</string>
+    <string name="preference_file_key">notification_box_pref</string>
 </resources>
